--- a/src/data_hub/holodeck/src/sass/_collectionTemplateDetails.scss
+++ b/src/data_hub/holodeck/src/sass/_collectionTemplateDetails.scss
@@ -13,7 +13,6 @@ shared styles for collection TemplateDetails components
   // main template content container div - BEGIN
   .template-content-div {
     margin-bottom: 15px;
-    background-color: $nest-background;
     color: $nest-text;
 
     // general elements - BEGIN
@@ -162,7 +161,7 @@ shared styles for collection TemplateDetails components
           margin-right: 5px;
           text-align: center;
           background-color: $primary-color;
-          color: $text-color;
+          color: $button-text;
 
           i {
             margin-right: 5px;
@@ -283,7 +282,7 @@ shared styles for collection TemplateDetails components
 
         .product-table-header {
           font-weight: 500;
-          color: $text-color;
+          color: $button-text;
           background-color: $primary-color;
         }
 
@@ -382,7 +381,7 @@ shared styles for collection TemplateDetails components
             margin-right: 5px;
             text-align: center;
             background-color: $primary-color;
-            color: $text-color;
+            color: $button-text;
 
             i {
               margin-right: 5px;
