--- a/src/data_hub/holodeck/src/sass/_footer.scss
+++ b/src/data_hub/holodeck/src/sass/_footer.scss
@@ -4,7 +4,6 @@ styles for component: Footer
 //
 
 .footer-component {
-  // background-color: $skin-primary;
   background-color: $footer-dark;
   color: $skin-text;
   width: 100%;
@@ -23,8 +22,7 @@ styles for component: Footer
 
 
   .footer-component__legal {
-    // background-color: $skin-secondary;
-    background-color: $skin-primary;
+    background-color: $footer-light;
     font-size: 12px;
     text-align: center;
     padding: 10px 0;
